test/unittest/error/tst.DTRACEFLT_UNKNOWN.sparc64.r
The arguments are 2 2 4 1 0
The value of arg4 = 0

-- @@stderr --
dtrace: error on enabled probe ID 2 (ID 1: dtrace:::BEGIN): invalid address ({ptr}) in action #2 at DIF offset 4
